Updated all services to return more detailed and standardised error messages.
Bumped dependencies to latest versions.

Tidied up appsettings for each project.

--- a/src/Web Apps/PanacheSoftware.UI.Client/appsettings.json
+++ b/src/Web Apps/PanacheSoftware.UI.Client/appsettings.json
@@ -33,13 +33,7 @@
       "TeamServiceURLSecure": "https://localhost:44306"
     },
     "Secret": {
-      "UIClientSecret": "49C1A7E1-0C79-4A89-A3D6-A37998FB86B0",
-      "APIGatewaySecret": "DDDCB193-213C-43FB-967A-5A911D2EFC04",
-      "ClientServiceSecret": "1314EF18-40FA-4B16-83DF-B276FF0D92A9",
-      "FileServiceSecret": "839C649E-4FE3-410C-B43F-69C017A52676",
-      "FoundationServiceSecret": "70CD8BB9-5256-42CF-8B95-DD61C1051AD0",
-      "TaskServiceSecret": "AC654B02-E46B-4359-B908-87479CBE1CEB",
-      "TeamServiceSecret": "5C9BF545-3C20-4448-9EEC-6B3E745B671E"
+      "UIClientSecret": "49C1A7E1-0C79-4A89-A3D6-A37998FB86B0"
     }
   }
 }
