--- a/src/Services/PanacheSoftware.Service.Foundation/appsettings.json
+++ b/src/Services/PanacheSoftware.Service.Foundation/appsettings.json
@@ -21,30 +21,10 @@
     },
     "Url": {
       "IdentityServerURL": "http://localhost:55002",
-      "IdentityServerURLSecure": "https://localhost:44302",
-      "APIGatewayURL": "http://localhost:55003",
-      "APIGatewayURLSecure": "https://localhost:44303",
-      "UIClientURL": "http://localhost:55001",
-      "UIClientURLSecure": "https://localhost:44301",
-      "ClientServiceURL": "http://localhost:55005",
-      "ClientServiceURLSecure": "https://localhost:44305",
-      "FileServiceURL": "http://localhost:55008",
-      "FileServiceURLSecure": "https://localhost:44308",
-      "FoundationServiceURL": "http://localhost:55004",
-      "FoundationServiceURLSecure": "https://localhost:44304",
-      "TaskServiceURL": "http://localhost:55007",
-      "TaskServiceURLSecure": "https://localhost:44307",
-      "TeamServiceURL": "http://localhost:55006",
-      "TeamServiceURLSecure": "https://localhost:44306"
+      "IdentityServerURLSecure": "https://localhost:44302"
     },
     "Secret": {
-      "UIClientSecret": "49C1A7E1-0C79-4A89-A3D6-A37998FB86B0",
-      "APIGatewaySecret": "DDDCB193-213C-43FB-967A-5A911D2EFC04",
-      "ClientServiceSecret": "1314EF18-40FA-4B16-83DF-B276FF0D92A9",
-      "FileServiceSecret": "839C649E-4FE3-410C-B43F-69C017A52676",
-      "FoundationServiceSecret": "70CD8BB9-5256-42CF-8B95-DD61C1051AD0",
-      "TaskServiceSecret": "AC654B02-E46B-4359-B908-87479CBE1CEB",
-      "TeamServiceSecret": "5C9BF545-3C20-4448-9EEC-6B3E745B671E"
+      "FoundationServiceSecret": "70CD8BB9-5256-42CF-8B95-DD61C1051AD0"
     }
   }
 }
