--- a/src/Web Apps/PanacheSoftware.Identity/PanacheSoftware.Identity.csproj
+++ b/src/Web Apps/PanacheSoftware.Identity/PanacheSoftware.Identity.csproj
@@ -3,10 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
-    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
     <UserSecretsId>f2fc2b76-7424-4729-b129-1c8595bd3b9a</UserSecretsId>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <DockerfileContext>..\..</DockerfileContext>
     <Deterministic>False</Deterministic>
     <AssemblyVersion>0.1.*</AssemblyVersion>
     <FileVersion>0.1.0.0</FileVersion>
@@ -24,6 +21,7 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
     <PackageReference Include="IdentityServer4" Version="4.0.4" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="4.0.4" />
+    <PackageReference Include="IdentityServer4.EntityFramework" Version="4.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.7" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.7" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.7" />
@@ -40,6 +38,11 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Core\PanacheSoftware.Core\PanacheSoftware.Core.csproj" />
     <ProjectReference Include="..\..\Web\PanacheSoftware.UI.Core\PanacheSoftware.UI.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Data\Migrations\ConfigurationDb\" />
+    <Folder Include="Data\Migrations\PersistedGrantDb\" />
   </ItemGroup>
 
 </Project>
