Added a fix for SameSite cookies which causes a problem in the latest versions of the Chrome browser.  More info at https://www.thinktecture.com/en/identity/samesite/prepare-your-identityserver/

--- a/src/Services/PanacheSoftware.Service.Client/appsettings.json
+++ b/src/Services/PanacheSoftware.Service.Client/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MSSQL": "Data Source=localhost;Database=PanacheSoftware.Client;User ID=sa;Password=Passw0rd123!;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "MySQL": "server=192.168.86.247;port=3306;database=PanacheSoftware.Client;user=pi;password=Passw0rd123!;GuidFormat=Char36"
+    "MySQL": "server=raspberrypi;port=3306;database=PanacheSoftware.Client;user=pi;password=Passw0rd123!;GuidFormat=Char36"
   },
   "PanacheSoftware": {
     "DBProvider": "MySQL",
