Updated UI Core so that only a single call is made to get all titles for view components.
Moved all projects to .NET 5 from .NET Core 3.1.  This uses all current release .NET 5 packages apart from MySQL integration where Pomelo package is currently a preview version.

--- a/src/Core/PanacheSoftware.Database/PanacheSoftware.Database.csproj
+++ b/src/Core/PanacheSoftware.Database/PanacheSoftware.Database.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Deterministic>False</Deterministic>
     <AssemblyVersion>0.1.*</AssemblyVersion>
     <FileVersion>0.1.0.0</FileVersion>
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
