--- a/src/API Gateway/PanacheSoftware.API.Gateway/PanacheSoftware.API.Gateway.csproj
+++ b/src/API Gateway/PanacheSoftware.API.Gateway/PanacheSoftware.API.Gateway.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Deterministic>False</Deterministic>
     <AssemblyVersion>0.1.*</AssemblyVersion>
     <FileVersion>0.1.0.0</FileVersion>
