--- a/src/Core/PanacheSoftware.Http/PanacheSoftware.Http.csproj
+++ b/src/Core/PanacheSoftware.Http/PanacheSoftware.Http.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <Deterministic>False</Deterministic>
     <AssemblyVersion>0.1.*</AssemblyVersion>
     <FileVersion>0.1.0.0</FileVersion>
@@ -9,9 +9,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IdentityModel" Version="4.3.1" />
-    <PackageReference Include="CompareNETObjects" Version="4.66.0" />
-    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="3.1.7" />
+    <PackageReference Include="IdentityModel" Version="4.4.0" />
+    <PackageReference Include="CompareNETObjects" Version="4.67.0" />
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.0" />
   </ItemGroup>
 
   <ItemGroup>
