--- a/support files/docker/raspberrypi/docker-compose.yml
+++ b/support files/docker/raspberrypi/docker-compose.yml
@@ -5,24 +5,23 @@ services:
     image: panachesoftware/panachesoftwareidentity-arm32:latest
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80      
-      - ConnectionStrings__MySQL=server={ip address of MySQL server};port=3306;database=PanacheSoftware.Identity;user=pi;password=Passw0rd123!;GuidFormat=Char36
+      - ASPNETCORE_URLS=http://+:55002      
+      - ConnectionStrings__MySQL=server=raspberrypi;port=3306;database=PanacheSoftware.Identity.Pi;user=pluser;password=Passw0rd123!;GuidFormat=Char36
       - PanacheSoftware__CallMethod__APICallsSecure=False
       - PanacheSoftware__CallMethod__UICallsSecure=False
       - PanacheSoftware__CallMethod__UseAPIGateway=False
       - PanacheSoftware__DBProvider=MySQL
       - PanacheSoftware__StartDomain=panachesoftware.com
-      - PanacheSoftware__Url__UIClientURL=http://{ip address of host or 172.17.0.1 if only accessing locally}:55001
-      - PanacheSoftware__Url__UIClientURLSecure=https://{ip address of host or 172.17.0.1 if only accessing locally}:44301
-      - PanacheSoftware__Secret__UIClientSecret=49C1A7E1-0C79-4A89-A3D6-A37998FB86B0
-      - PanacheSoftware__Secret__APIGatewaySecret=DDDCB193-213C-43FB-967A-5A911D2EFC04
-      - PanacheSoftware__Secret__ClientServiceSecret=1314EF18-40FA-4B16-83DF-B276FF0D92A9
-      - PanacheSoftware__Secret__FileServiceSecret=839C649E-4FE3-410C-B43F-69C017A52676
-      - PanacheSoftware__Secret__FoundationServiceSecret=70CD8BB9-5256-42CF-8B95-DD61C1051AD0
-      - PanacheSoftware__Secret__TaskServiceSecret=AC654B02-E46B-4359-B908-87479CBE1CEB
-      - PanacheSoftware__Secret__TeamServiceSecret=5C9BF545-3C20-4448-9EEC-6B3E745B671E
-    ports:
-      - "{delete this if running locally, otherwise ip address of host i.e. 123.456.78.900:}55002:80"
+      - PanacheSoftware__Url__UIClientURL=http://raspberrypi:55001
+      - PanacheSoftware__Url__UIClientURLSecure=https://raspberrypi:44301
+      - PanacheSoftware__Secret__UIClientSecret=9C32BBD1-9C08-40FA-96C3-2195F61661F1
+      - PanacheSoftware__Secret__APIGatewaySecret=D32CAA87-2F1F-4D35-B2DF-C712C2AFF6C3
+      - PanacheSoftware__Secret__ClientServiceSecret=AA04416A-A87B-4D88-956B-27CBFFCC2802
+      - PanacheSoftware__Secret__FileServiceSecret=6D20E27B-18EE-4694-AFB7-929343F51D43
+      - PanacheSoftware__Secret__FoundationServiceSecret=A81F774A-6E87-4C37-BEA0-2F62CC2F374A
+      - PanacheSoftware__Secret__TaskServiceSecret=8CDD9C0B-EAD3-4377-A42E-AEEAC9909C0D
+      - PanacheSoftware__Secret__TeamServiceSecret=819E2211-EAD4-49D0-84E5-29E6F45587BB
+    network_mode: "host"
     restart: always
 
   panachesoftware.service.team:
@@ -31,18 +30,17 @@ services:
       - panachesoftware.identity
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80
-      - ConnectionStrings__MySQL=server={ip address of MySQL server};port=3306;database=PanacheSoftware.Team;user=pi;password=Passw0rd123!;GuidFormat=Char36
+      - ASPNETCORE_URLS=http://+:55006
+      - ConnectionStrings__MySQL=server=raspberrypi;port=3306;database=PanacheSoftware.Team.Pi;user=pluser;password=Passw0rd123!;GuidFormat=Char36
       - PanacheSoftware__CallMethod__APICallsSecure=False
       - PanacheSoftware__CallMethod__UICallsSecure=False
       - PanacheSoftware__CallMethod__UseAPIGateway=False
       - PanacheSoftware__DBProvider=MySQL
       - PanacheSoftware__StartDomain=panachesoftware.com
-      - PanacheSoftware__Url__IdentityServerURL=http://{ip address of host or 172.17.0.1 if only accessing locally}:55002
-      - PanacheSoftware__Url__IdentityServerURLSecure=https://{ip address of host or 172.17.0.1 if only accessing locally}:44302
-      - PanacheSoftware__Secret__TeamServiceSecret=5C9BF545-3C20-4448-9EEC-6B3E745B671E
-    ports:
-      - "{delete this if running locally, otherwise ip address of host i.e. 123.456.78.900:}55006:80"
+      - PanacheSoftware__Url__IdentityServerURL=http://raspberrypi:55002
+      - PanacheSoftware__Url__IdentityServerURLSecure=https://raspberrypi:44302
+      - PanacheSoftware__Secret__TeamServiceSecret=819E2211-EAD4-49D0-84E5-29E6F45587BB
+    network_mode: "host"
     restart: always
 
   panachesoftware.service.task:
@@ -52,20 +50,19 @@ services:
       - panachesoftware.service.team
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80
-      - ConnectionStrings__MySQL=server={ip address of MySQL server};port=3306;database=PanacheSoftware.Task;user=pi;password=Passw0rd123!;GuidFormat=Char36
+      - ASPNETCORE_URLS=http://+:55007
+      - ConnectionStrings__MySQL=server=raspberrypi;port=3306;database=PanacheSoftware.Task.Pi;user=pluser;password=Passw0rd123!;GuidFormat=Char36
       - PanacheSoftware__CallMethod__APICallsSecure=False
       - PanacheSoftware__CallMethod__UICallsSecure=False
       - PanacheSoftware__CallMethod__UseAPIGateway=False
       - PanacheSoftware__DBProvider=MySQL
       - PanacheSoftware__StartDomain=panachesoftware.com
-      - PanacheSoftware__Url__IdentityServerURL=http://{ip address of host or 172.17.0.1 if only accessing locally}:55002
-      - PanacheSoftware__Url__IdentityServerURLSecure=https://{ip address of host or 172.17.0.1 if only accessing locally}:44302
-      - PanacheSoftware__Url__TeamServiceURL=http://{ip address of host or 172.17.0.1 if only accessing locally}:55006
-      - PanacheSoftware__Url__TeamServiceURLSecure=https://{ip address of host or 172.17.0.1 if only accessing locally}:44306
-      - PanacheSoftware__Secret__TaskServiceSecret=AC654B02-E46B-4359-B908-87479CBE1CEB
-    ports:
-      - "{delete this if running locally, otherwise ip address of host i.e. 123.456.78.900:}55007:80"
+      - PanacheSoftware__Url__IdentityServerURL=http://raspberrypi:55002
+      - PanacheSoftware__Url__IdentityServerURLSecure=https://raspberrypi:44302
+      - PanacheSoftware__Url__TeamServiceURL=http://raspberrypi:55006
+      - PanacheSoftware__Url__TeamServiceURLSecure=https://raspberrypi:44306
+      - PanacheSoftware__Secret__TaskServiceSecret=8CDD9C0B-EAD3-4377-A42E-AEEAC9909C0D
+    network_mode: "host"
     restart: always
 
   panachesoftware.service.foundation:
@@ -74,18 +71,17 @@ services:
       - panachesoftware.identity
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80
-      - ConnectionStrings__MySQL=server={ip address of MySQL server};port=3306;database=PanacheSoftware.Foundation;user=pi;password=Passw0rd123!;GuidFormat=Char36
+      - ASPNETCORE_URLS=http://+:55004
+      - ConnectionStrings__MySQL=server=raspberrypi;port=3306;database=PanacheSoftware.Foundation.Pi;user=pluser;password=Passw0rd123!;GuidFormat=Char36
       - PanacheSoftware__CallMethod__APICallsSecure=False
       - PanacheSoftware__CallMethod__UICallsSecure=False
       - PanacheSoftware__CallMethod__UseAPIGateway=False
       - PanacheSoftware__DBProvider=MySQL
       - PanacheSoftware__StartDomain=panachesoftware.com
-      - PanacheSoftware__Url__IdentityServerURL=http://{ip address of host or 172.17.0.1 if only accessing locally}:55002
-      - PanacheSoftware__Url__IdentityServerURLSecure=https://{ip address of host or 172.17.0.1 if only accessing locally}:44302
-      - PanacheSoftware__Secret__FoundationServiceSecret=70CD8BB9-5256-42CF-8B95-DD61C1051AD0
-    ports:
-      - "{delete this if running locally, otherwise ip address of host i.e. 123.456.78.900:}55004:80"
+      - PanacheSoftware__Url__IdentityServerURL=http://raspberrypi:55002
+      - PanacheSoftware__Url__IdentityServerURLSecure=https://raspberrypi:44302
+      - PanacheSoftware__Secret__FoundationServiceSecret=A81F774A-6E87-4C37-BEA0-2F62CC2F374A
+    network_mode: "host"
     restart: always
 
   panachesoftware.service.file:
@@ -94,18 +90,17 @@ services:
       - panachesoftware.identity
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80
-      - ConnectionStrings__MySQL=server={ip address of MySQL server};port=3306;database=PanacheSoftware.File;user=pi;password=Passw0rd123!;GuidFormat=Char36
+      - ASPNETCORE_URLS=http://+:55008
+      - ConnectionStrings__MySQL=server=raspberrypi;port=3306;database=PanacheSoftware.File.Pi;user=pluser;password=Passw0rd123!;GuidFormat=Char36
       - PanacheSoftware__CallMethod__APICallsSecure=False
       - PanacheSoftware__CallMethod__UICallsSecure=False
       - PanacheSoftware__CallMethod__UseAPIGateway=False
       - PanacheSoftware__DBProvider=MySQL
       - PanacheSoftware__StartDomain=panachesoftware.com
-      - PanacheSoftware__Url__IdentityServerURL=http://{ip address of host or 172.17.0.1 if only accessing locally}:55002
-      - PanacheSoftware__Url__IdentityServerURLSecure=https://{ip address of host or 172.17.0.1 if only accessing locally}:44302
-      - PanacheSoftware__Secret__FileServiceSecret=839C649E-4FE3-410C-B43F-69C017A52676
-    ports:
-      - "{delete this if running locally, otherwise ip address of host i.e. 123.456.78.900:}55008:80"
+      - PanacheSoftware__Url__IdentityServerURL=http://raspberrypi:55002
+      - PanacheSoftware__Url__IdentityServerURLSecure=https://raspberrypi:44302
+      - PanacheSoftware__Secret__FileServiceSecret=6D20E27B-18EE-4694-AFB7-929343F51D43
+    network_mode: "host"
     restart: always
 
   panachesoftware.service.client:
@@ -114,18 +109,17 @@ services:
       - panachesoftware.identity
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80
-      - ConnectionStrings__MySQL=server={ip address of MySQL server};port=3306;database=PanacheSoftware.Client;user=pi;password=Passw0rd123!;GuidFormat=Char36
+      - ASPNETCORE_URLS=http://+:55005
+      - ConnectionStrings__MySQL=server=raspberrypi;port=3306;database=PanacheSoftware.Client.Pi;user=pluser;password=Passw0rd123!;GuidFormat=Char36
       - PanacheSoftware__CallMethod__APICallsSecure=False
       - PanacheSoftware__CallMethod__UICallsSecure=False
       - PanacheSoftware__CallMethod__UseAPIGateway=False
       - PanacheSoftware__DBProvider=MySQL
       - PanacheSoftware__StartDomain=panachesoftware.com
-      - PanacheSoftware__Url__IdentityServerURL=http://{ip address of host or 172.17.0.1 if only accessing locally}:55002
-      - PanacheSoftware__Url__IdentityServerURLSecure=https://{ip address of host or 172.17.0.1 if only accessing locally}:44302
-      - PanacheSoftware__Secret__ClientServiceSecret=1314EF18-40FA-4B16-83DF-B276FF0D92A9
-    ports:
-      - "{delete this if running locally, otherwise ip address of host i.e. 123.456.78.900:}55005:80"
+      - PanacheSoftware__Url__IdentityServerURL=http://raspberrypi:55002
+      - PanacheSoftware__Url__IdentityServerURLSecure=https://raspberrypi:44302
+      - PanacheSoftware__Secret__ClientServiceSecret=AA04416A-A87B-4D88-956B-27CBFFCC2802
+    network_mode: "host"
     restart: always
 
   panachesoftware.ui.client:
@@ -139,28 +133,27 @@ services:
       - panachesoftware.service.client
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:80
+      - ASPNETCORE_URLS=http://+:55001
       - PanacheSoftware__CallMethod__APICallsSecure=False
       - PanacheSoftware__CallMethod__UICallsSecure=False
       - PanacheSoftware__CallMethod__UseAPIGateway=False
       - PanacheSoftware__StartDomain=panachesoftware.com
-      - PanacheSoftware__Url__IdentityServerURL=http://{ip address of host or 172.17.0.1 if only accessing locally}:55002
-      - PanacheSoftware__Url__IdentityServerURLSecure=https://{ip address of host or 172.17.0.1 if only accessing locally}:44302
-      - PanacheSoftware__Url__APIGatewayURL=http://{ip address of host or 172.17.0.1 if only accessing locally}:55003
-      - PanacheSoftware__Url__APIGatewayURLSecure=https://{ip address of host or 172.17.0.1 if only accessing locally}:44303
-      - PanacheSoftware__Url__UIClientURL=http://{ip address of host or 172.17.0.1 if only accessing locally}:55001
-      - PanacheSoftware__Url__UIClientURLSecure=https://{ip address of host or 172.17.0.1 if only accessing locally}:44301
-      - PanacheSoftware__Url__ClientServiceURL=http://{ip address of host or 172.17.0.1 if only accessing locally}:55005
-      - PanacheSoftware__Url__ClientServiceURLSecure=https://{ip address of host or 172.17.0.1 if only accessing locally}:44305
-      - PanacheSoftware__Url__FileServiceURL=http://{ip address of host or 172.17.0.1 if only accessing locally}:55008
-      - PanacheSoftware__Url__FileServiceURLSecure=https://{ip address of host or 172.17.0.1 if only accessing locally}:44308
-      - PanacheSoftware__Url__FoundationServiceURL=http://{ip address of host or 172.17.0.1 if only accessing locally}:55004
-      - PanacheSoftware__Url__FoundationServiceURLSecure=https://{ip address of host or 172.17.0.1 if only accessing locally}:44304
-      - PanacheSoftware__Url__TaskServiceURL=http://{ip address of host or 172.17.0.1 if only accessing locally}:55007
-      - PanacheSoftware__Url__TaskServiceURLSecure=https://{ip address of host or 172.17.0.1 if only accessing locally}:44307
-      - PanacheSoftware__Url__TeamServiceURL=http://{ip address of host or 172.17.0.1 if only accessing locally}:55006
-      - PanacheSoftware__Url__TeamServiceURLSecure=https://{ip address of host or 172.17.0.1 if only accessing locally}:44306
-      - PanacheSoftware__Secret__UIClientSecret=49C1A7E1-0C79-4A89-A3D6-A37998FB86B0
-    ports:
-      - "{delete this if running locally, otherwise ip address of host i.e. 123.456.78.900:}55001:80"
+      - PanacheSoftware__Url__IdentityServerURL=http://raspberrypi:55002
+      - PanacheSoftware__Url__IdentityServerURLSecure=https://raspberrypi:44302
+      - PanacheSoftware__Url__APIGatewayURL=http://raspberrypi:55003
+      - PanacheSoftware__Url__APIGatewayURLSecure=https://raspberrypi:44303
+      - PanacheSoftware__Url__UIClientURL=http://raspberrypi:55001
+      - PanacheSoftware__Url__UIClientURLSecure=https://raspberrypi:44301
+      - PanacheSoftware__Url__ClientServiceURL=http://raspberrypi:55005
+      - PanacheSoftware__Url__ClientServiceURLSecure=https://raspberrypi:44305
+      - PanacheSoftware__Url__FileServiceURL=http://raspberrypi:55008
+      - PanacheSoftware__Url__FileServiceURLSecure=https://raspberrypi:44308
+      - PanacheSoftware__Url__FoundationServiceURL=http://raspberrypi:55004
+      - PanacheSoftware__Url__FoundationServiceURLSecure=https://raspberrypi:44304
+      - PanacheSoftware__Url__TaskServiceURL=http://raspberrypi:55007
+      - PanacheSoftware__Url__TaskServiceURLSecure=https://raspberrypi:44307
+      - PanacheSoftware__Url__TeamServiceURL=http://raspberrypi:55006
+      - PanacheSoftware__Url__TeamServiceURLSecure=https://raspberrypi:44306
+      - PanacheSoftware__Secret__UIClientSecret=9C32BBD1-9C08-40FA-96C3-2195F61661F1
+    network_mode: "host"
     restart: always
