CustomField Service Project created and basic project structure and domain objects created.

--- a/src/Services/PanacheSoftware.Service.Team/Properties/launchSettings.json
+++ b/src/Services/PanacheSoftware.Service.Team/Properties/launchSettings.json
@@ -19,7 +19,7 @@
     "PanacheSoftware.Service.Team": {
       "commandName": "Project",
       "launchBrowser": true,
-      "launchUrl": "weatherforecast",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
