CustomField Service database creation in place and initial Test APIController running. Adjustments made to Identity to clear and rebuild clients if found, along with populating new scopes.  This solves problems where new APIs couldn't be added without recreating the identity database. Added quick fix to user profile page in UI client to show current access token so that this can be used when calling APIs via Swagger.

--- a/src/Services/PanacheSoftware.Service.CustomField/appsettings.json
+++ b/src/Services/PanacheSoftware.Service.CustomField/appsettings.json
@@ -6,5 +6,25 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MSSQL": "Data Source=localhost;Database=PanacheSoftware.Task;User ID=sa;Password=Passw0rd123!;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "MySQL": "server=raspberrypi;port=3306;database=PanacheSoftware.CustomField;user=pi;password=Passw0rd123!;GuidFormat=Char36"
+  },
+  "PanacheSoftware": {
+    "DBProvider": "MySQL",
+    "StartDomain": "panachesoftware.com",
+    "CallMethod": {
+      "APICallsSecure": "false",
+      "UICallsSecure": "false",
+      "UseAPIGateway": "false"
+    },
+    "Url": {
+      "IdentityServerURL": "http://localhost:55002",
+      "IdentityServerURLSecure": "https://localhost:44302",
+    },
+    "Secret": {
+      "CustomFieldServiceSecret": "98E90BBB-2343-4B3B-B008-5A958BE60AF3"
+    }
+  }
 }
