--- a/src/Web Apps/PanacheSoftware.UI.Client/appsettings.json
+++ b/src/Web Apps/PanacheSoftware.UI.Client/appsettings.json
@@ -30,7 +30,9 @@
       "TaskServiceURL": "http://localhost:55007",
       "TaskServiceURLSecure": "https://localhost:44307",
       "TeamServiceURL": "http://localhost:55006",
-      "TeamServiceURLSecure": "https://localhost:44306"
+      "TeamServiceURLSecure": "https://localhost:44306",
+      "CustomFieldServiceURL": "http://localhost:55009",
+      "CustomFieldServiceURLSecure": "https://localhost:44309"
     },
     "Secret": {
       "UIClientSecret": "49C1A7E1-0C79-4A89-A3D6-A37998FB86B0"
