Added experimental docker compose file for ARM

--- a/src/Services/PanacheSoftware.Service.CustomField/appsettings.json
+++ b/src/Services/PanacheSoftware.Service.CustomField/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MSSQL": "Data Source=localhost;Database=PanacheSoftware.Task;User ID=sa;Password=Passw0rd123!;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "MSSQL": "Data Source=localhost;Database=PanacheSoftware.CustomField;User ID=sa;Password=Passw0rd123!;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
     "MySQL": "server=raspberrypi;port=3306;database=PanacheSoftware.CustomField;user=pi;password=Passw0rd123!;GuidFormat=Char36"
   },
   "PanacheSoftware": {
