Added initial POC of blazor table pagination to Client list page.  This will be moved to a full PaginatedTable blazor component that can be reused.

--- a/src/Web Apps/PanacheSoftware.UI.Client/Properties/launchSettings.json
+++ b/src/Web Apps/PanacheSoftware.UI.Client/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "http://localhost:55001",
+      "launchUrl": "https://localhost:44301",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
