--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/PanacheSoftware.UI.Client.Blazor.csproj
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/PanacheSoftware.UI.Client.Blazor.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazorise.Bootstrap" Version="0.9.3.4" />
+    <PackageReference Include="Blazorise.DataGrid" Version="0.9.3.4" />
+    <PackageReference Include="Blazorise.Icons.FontAwesome" Version="0.9.3.4" />
+    <PackageReference Include="Blazorise.Sidebar" Version="0.9.3.4" />
     <PackageReference Include="IdentityModel" Version="4.4.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.1" />
