--- a/src/Web Apps/PanacheSoftware.UI.Client.Blazor/PanacheSoftware.UI.Client.Blazor.csproj
+++ b/src/Web Apps/PanacheSoftware.UI.Client.Blazor/PanacheSoftware.UI.Client.Blazor.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
   
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.0" />
     <PackageReference Include="Blazorise.Bootstrap" Version="0.9.3.6" />
     <PackageReference Include="Blazorise.Components" Version="0.9.3.6" />
     <PackageReference Include="Blazorise.DataGrid" Version="0.9.3.6" />
